build-logs/build-text-icu-0.8.0.5.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - text-icu-0.8.0.5 (lib) (first run)
 - text-icu-0.8.0.5 (test:tests) (first run)
Configuring library for text-icu-0.8.0.5...
Preprocessing library for text-icu-0.8.0.5...
Building library for text-icu-0.8.0.5...
[ 1 of 38] Compiling Data.Text.ICU.BiDi.Internal
[ 2 of 38] Compiling Data.Text.ICU.BitMask
[ 3 of 38] Compiling Data.Text.ICU.Error.Internal
[ 4 of 38] Compiling Data.Text.ICU.Error
[ 5 of 38] Compiling Data.Text.ICU.Convert.Internal
[ 6 of 38] Compiling Data.Text.ICU.Internal
[ 7 of 38] Compiling Data.Text.ICU.Enumerator
[ 8 of 38] Compiling Data.Text.ICU.Convert
[ 9 of 38] Compiling Data.Text.ICU.Collate.Internal
[10 of 38] Compiling Data.Text.ICU.Collate

Data/Text/ICU/Collate.hsc:345:37: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
    |
345 |                                     memcpy p op (fromIntegral i)
    |                                     ^^^^^^
[11 of 38] Compiling Data.Text.ICU.Collate.Pure
[12 of 38] Compiling Data.Text.ICU.CharsetDetection.Internal
[13 of 38] Compiling Data.Text.ICU.CharsetDetection
[14 of 38] Compiling Data.Text.ICU.Calendar
[15 of 38] Compiling Data.Text.ICU.DateFormatter
[16 of 38] Compiling Data.Text.ICU.Break.Types
[17 of 38] Compiling Data.Text.ICU.Break
[18 of 38] Compiling Data.Text.ICU.Break.Pure
[19 of 38] Compiling Data.Text.ICU.BiDi
[20 of 38] Compiling Data.Text.ICU.Iterator
[21 of 38] Compiling Data.Text.ICU.Locale
[22 of 38] Compiling Data.Text.ICU.Normalize.Internal
[23 of 38] Compiling Data.Text.ICU.Normalize
[24 of 38] Compiling Data.Text.ICU.Char
[25 of 38] Compiling Data.Text.ICU.Normalize2
[26 of 38] Compiling Data.Text.ICU.Number.Internal
[27 of 38] Compiling Data.Text.ICU.Number
[28 of 38] Compiling Data.Text.ICU.NumberFormatter
[29 of 38] Compiling Data.Text.ICU.Regex.Internal
[30 of 38] Compiling Data.Text.ICU.Regex
[31 of 38] Compiling Data.Text.ICU.Regex.Pure
[32 of 38] Compiling Data.Text.ICU.Shape
[33 of 38] Compiling Data.Text.ICU.Spoof.Internal
[34 of 38] Compiling Data.Text.ICU.Spoof

Data/Text/ICU/Spoof.hsc:433:7: warning: [GHC-68441] [-Wdeprecations]
    In the use of ‘memcpy’
    (imported from Data.ByteString.Internal, but defined in Data.ByteString.Internal.Type):
    Deprecated: "Use Foreign.Marshal.Utils.copyBytes instead"
    |
433 |       memcpy dptr bptr (fromIntegral dlen))
    |       ^^^^^^
[35 of 38] Compiling Data.Text.ICU.Spoof.Pure
[36 of 38] Compiling Data.Text.ICU.Text
[37 of 38] Compiling Data.Text.ICU
[38 of 38] Compiling Data.Text.ICU.Types
cbits/text_icu.c: In function ‘__hs_unorm_quickCheck’:

cbits/text_icu.c:537:5: error:
     warning: ‘unorm_quickCheck_70’ is deprecated [-Wdeprecated-declarations]
      537 |     return unorm_quickCheck(source, sourcelength, mode, status);
          |     ^~~~~~
    |
537 |     return unorm_quickCheck(source, sourcelength, mode, status);
    |     ^
In file included from /usr/include/unicode/platform.h:25,
                 from /usr/include/unicode/ptypes.h:52,
                 from /usr/include/unicode/umachine.h:46,
                 from /usr/include/unicode/utypes.h:38,
                 from include/hs_text_icu.h:5,

                 from cbits/text_icu.c:1:0: error: 

/usr/include/unicode/unorm.h:244:1: error:
     note: declared here
      244 | unorm_quickCheck(const UChar *source, int32_t sourcelength,
          | ^~~~~~~~~~~~~~~~
    |
244 | unorm_quickCheck(const UChar *source, int32_t sourcelength,
    | ^
cbits/text_icu.c: In function ‘__hs_unorm_isNormalized’:

cbits/text_icu.c:544:5: error:
     warning: ‘unorm_isNormalized_70’ is deprecated [-Wdeprecated-declarations]
      544 |     return unorm_isNormalized(src, srcLength, mode, pErrorCode);
          |     ^~~~~~
    |
544 |     return unorm_isNormalized(src, srcLength, mode, pErrorCode);
    |     ^
In file included from /usr/include/unicode/platform.h:25,
                 from /usr/include/unicode/ptypes.h:52,
                 from /usr/include/unicode/umachine.h:46,
                 from /usr/include/unicode/utypes.h:38,
                 from include/hs_text_icu.h:5,

                 from cbits/text_icu.c:1:0: error: 

/usr/include/unicode/unorm.h:291:1: error:
     note: declared here
      291 | unorm_isNormalized(const UChar *src, int32_t srcLength,
          | ^~~~~~~~~~~~~~~~~~
    |
291 | unorm_isNormalized(const UChar *src, int32_t srcLength,
    | ^
cbits/text_icu.c: In function ‘__hs_unorm_normalize’:

cbits/text_icu.c:552:5: error:
     warning: ‘unorm_normalize_70’ is deprecated [-Wdeprecated-declarations]
      552 |     return unorm_normalize(source, sourceLength, mode, options, result,
          |     ^~~~~~
    |
552 |     return unorm_normalize(source, sourceLength, mode, options, result,
    |     ^
In file included from /usr/include/unicode/platform.h:25,
                 from /usr/include/unicode/ptypes.h:52,
                 from /usr/include/unicode/umachine.h:46,
                 from /usr/include/unicode/utypes.h:38,
                 from include/hs_text_icu.h:5,

                 from cbits/text_icu.c:1:0: error: 

/usr/include/unicode/unorm.h:218:1: error:
     note: declared here
      218 | unorm_normalize(const UChar *source, int32_t sourceLength,
          | ^~~~~~~~~~~~~~~
    |
218 | unorm_normalize(const UChar *source, int32_t sourceLength,
    | ^
cbits/text_icu.c: In function ‘__hs_unorm_quickCheck’:

cbits/text_icu.c:537:5: error:
     warning: ‘unorm_quickCheck_70’ is deprecated [-Wdeprecated-declarations]
      537 |     return unorm_quickCheck(source, sourcelength, mode, status);
          |     ^~~~~~
    |
537 |     return unorm_quickCheck(source, sourcelength, mode, status);
    |     ^
In file included from /usr/include/unicode/platform.h:25,
                 from /usr/include/unicode/ptypes.h:52,
                 from /usr/include/unicode/umachine.h:46,
                 from /usr/include/unicode/utypes.h:38,
                 from include/hs_text_icu.h:5,

                 from cbits/text_icu.c:1:0: error: 

/usr/include/unicode/unorm.h:244:1: error:
     note: declared here
      244 | unorm_quickCheck(const UChar *source, int32_t sourcelength,
          | ^~~~~~~~~~~~~~~~
    |
244 | unorm_quickCheck(const UChar *source, int32_t sourcelength,
    | ^
cbits/text_icu.c: In function ‘__hs_unorm_isNormalized’:

cbits/text_icu.c:544:5: error:
     warning: ‘unorm_isNormalized_70’ is deprecated [-Wdeprecated-declarations]
      544 |     return unorm_isNormalized(src, srcLength, mode, pErrorCode);
          |     ^~~~~~
    |
544 |     return unorm_isNormalized(src, srcLength, mode, pErrorCode);
    |     ^
In file included from /usr/include/unicode/platform.h:25,
                 from /usr/include/unicode/ptypes.h:52,
                 from /usr/include/unicode/umachine.h:46,
                 from /usr/include/unicode/utypes.h:38,
                 from include/hs_text_icu.h:5,

                 from cbits/text_icu.c:1:0: error: 

/usr/include/unicode/unorm.h:291:1: error:
     note: declared here
      291 | unorm_isNormalized(const UChar *src, int32_t srcLength,
          | ^~~~~~~~~~~~~~~~~~
    |
291 | unorm_isNormalized(const UChar *src, int32_t srcLength,
    | ^
cbits/text_icu.c: In function ‘__hs_unorm_normalize’:

cbits/text_icu.c:552:5: error:
     warning: ‘unorm_normalize_70’ is deprecated [-Wdeprecated-declarations]
      552 |     return unorm_normalize(source, sourceLength, mode, options, result,
          |     ^~~~~~
    |
552 |     return unorm_normalize(source, sourceLength, mode, options, result,
    |     ^
In file included from /usr/include/unicode/platform.h:25,
                 from /usr/include/unicode/ptypes.h:52,
                 from /usr/include/unicode/umachine.h:46,
                 from /usr/include/unicode/utypes.h:38,
                 from include/hs_text_icu.h:5,

                 from cbits/text_icu.c:1:0: error: 

/usr/include/unicode/unorm.h:218:1: error:
     note: declared here
      218 | unorm_normalize(const UChar *source, int32_t sourceLength,
          | ^~~~~~~~~~~~~~~
    |
218 | unorm_normalize(const UChar *source, int32_t sourceLength,
    | ^
Configuring test suite 'tests' for text-icu-0.8.0.5...
Preprocessing test suite 'tests' for text-icu-0.8.0.5...
Building test suite 'tests' for text-icu-0.8.0.5...
[1 of 3] Compiling QuickCheckUtils
[2 of 3] Compiling Properties
[3 of 3] Compiling Main
[4 of 4] Linking /tmp/workdir-text-icu/text-icu-0.8.0.5/dist-newstyle/build/x86_64-linux/ghc-9.6.6/text-icu-0.8.0.5/t/tests/build/tests/tests
